fix: updating coral tag label to word wrap

--- a/coral-component-taglist/src/styles/index.styl
+++ b/coral-component-taglist/src/styles/index.styl
@@ -36,6 +36,15 @@
   margin: calc(var(--spectrum-medium-taggroup-tag-gap-x) / 2);
 }
 
+._coral-Tags-itemLabel {
+  height: 100%;
+    line-height: 22px;
+        flex: 1 1 auto;
+    font-size: 12px;
+    cursor: default;
+    white-space: normal;
+}
+
 @require 'light';
 @require 'lightest';
 @require 'dark';
